fix(ui): select font-size align to other form items

--- a/ui/src/styles/layout/element-plus-overload.scss
+++ b/ui/src/styles/layout/element-plus-overload.scss
@@ -148,6 +148,7 @@
 
     .el-select__wrapper {
         background-color: var(--input-bg);
+        font-size: var(--el-font-size-base);
 
         &.is-disabled {
             html.dark & {
